Working A record query/response.

--- a/conf/chartd.conf
+++ b/conf/chartd.conf
@@ -1,7 +1,7 @@
 {
   "DEFAULT_ADDRESS" : "192.168.0.1",
-  "REDIS" : True,
+  "REDIS" : false,
   "REDIS_ADDRESS" : "localhost",
   "ZONEFILE" : "/path/to/zonefile",
-  "FORWARD_NOMATCH" : True
+  "FORWARD_NOMATCH" : true
 }
